bisonc++ (3.02.00)

  * Implemented the %polymorphic directive. Bisonc++ itself uses %polymorphic
    to implement its own polymorphic semantic values; man-page and manual
    extended with sections about polymorphic semantic values.

  * The previously used class spSemBase and derivatives (e.g., SemBase,
    Semantic) are now obsolete and the directory sembase implementing these
    classes was removed.

TO DO: Adapt the manual/manpage

bisonc++ (3.01.00)

  * The `%print-tokens' directive was accidentally omitted from
    3.00.00. Repaired in this release.

  * Starting this release all release tags (using names that are identical to
    the version number, so for this release the tag is 3.01.00) are signed to
    allow authentication.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 27 Feb 2012 13:33:20 +0100

bisonc++ (3.00.00)

  * This release's scanner was built by flexc++

  * Option handling was separated from parsing, following the method also used
    in flexc++: a class Options holds and maintains directives and options
    that are used in multiple points in bisonc++'s sources. The Parser passes
    directive specifications to set-functions defined by the class Options.

  * The parser's semantic value handling recevied a complete overhaul. Unions
    are no longer used; instead a light-weight polymorphic base class in
    combination with some template meta programming was used to handle the
    semantic values. See sembase/sembase.h for a description of the appproach.

  * Options and directives were rationalized/standardized. See the man-page
    for details. Grammar specification files should no longer use %print, but
    should either use %print-tokens or %own-tokens (or the equivalent
    command-line options).

  * NOTE: Existing Parser class interfaces (i.e. parser.h) must be
    (hand-) modified by declaring a private member 

        void print__();

    See the man-page and/or manual for details about print__.
