@@ -2,13 +2,30 @@
 
 $insert class.h
 
-    // Add below here any includes etc. that are only 
-    // required for the compilation of \@'s sources.
+$insert namespace-open
+
+inline void \@::error(char const *msg)
+{
+    std::cerr << msg << '\n';
+}
+
+$insert lex
+
+inline void Parser::print()         
+{
+    print__();           // displays tokens if --print was specified
+}
+
+$insert namespace-close
+
+    // Add here includes that are only required for the compilation 
+    // of \@'s sources.
 
 
 $insert namespace-use
 
     // UN-comment the next using-declaration if you want to use
-    // symbols from the namespace std without specifying std::
-//using namespace std;
+    // int \@'s sources symbols from the namespace std without
+    // specifying std::
 
+//using namespace std;
